--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
              <p class="mt-6 max-w-xl mx-auto text-lg text-gray-400 fade-in">
                 I'm currently open to new opportunities and would love to hear from you. Whether you have a question or just want to say hi, I'll do my best to get back to you!
              </p>
-             <div class="mt-8 fade-in">
+             <div class="mt-8 fade-in"
                 <a href="mailto:bhattaraibhupall@gmail.com" class="cta-button">Say Hello</a>
              </div>
         </section>
