--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
     </footer>
 
     <!-- Custom JavaScript -->
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
