--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="antialiased">
 
@@ -199,7 +199,7 @@
              <p class="mt-6 max-w-xl mx-auto text-lg text-gray-400 fade-in">
                 I'm currently open to new opportunities and would love to hear from you. Whether you have a question or just want to say hi, I'll do my best to get back to you!
              </p>
-             <div class="mt-8 fade-in"
+             <div class="mt-8 fade-in">
                 <a href="mailto:bhattaraibhupall@gmail.com" class="cta-button">Say Hello</a>
              </div>
         </section>
@@ -216,6 +216,6 @@
     </footer>
 
     <!-- Custom JavaScript -->
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
