--- a/index.html
+++ b/index.html
@@ -66,12 +66,28 @@
             <div class="w-full">
                 <p class="text-accent text-lg mb-4 fade-in" style="transition-delay: 100ms;">Hi, I am</p>
                 <h1 class="text-4xl sm:text-6xl md:text-7xl font-bold text-gray-100 fade-in" style="transition-delay: 200ms;">Bhupal Bhattarai.</h1>
-                <h2 class="text-3xl sm:text-5xl md:text-6xl font-bold text-gray-400 mt-2 fade-in" style="transition-delay: 300ms;">I build things for the web and manage IT systems.</h2>
                 <p class="mt-6 max-w-xl text-lg text-gray-400 fade-in" style="transition-delay: 400ms;">
                     I'm a diligent and adaptable professional with a passion for technology, skilled in IT operations, public relations, and customer service. I thrive on learning new skills and contributing to team success.
                 </p>
-                <div class="mt-8 fade-in" style="transition-delay: 500ms;">
+                <div class="mt-8 flex items-center space-x-6 fade-in" style="transition-delay: 500ms;">
                     <a href="#contact" class="cta-button">Get In Touch</a>
+                    <div class="social-icons flex items-center space-x-4">
+                        <a href="https://facebook.com/officialbhupal" target="_blank" class="social-icon" aria-label="Facebook">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
+                        </a>
+                        <a href="https://twitter.com/officialbhupal" target="_blank" class="social-icon" aria-label="Twitter">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
+                        </a>
+                        <a href="https://instagram.com/officialbhupal" target="_blank" class="social-icon" aria-label="Instagram">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+                        </a>
+                        <a href="tel:+9779817974297" class="social-icon" aria-label="Call">
+                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+                        </a>
+                        <a href="mailto:contact@bhupalbhattarai.com.np" class="social-icon" aria-label="Email">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -203,7 +219,7 @@
                 I'm currently open to new opportunities and would love to hear from you. Whether you have a question or just want to say hi, I'll do my best to get back to you!
              </p>
              <div class="mt-8 fade-in">
-                <a href="mailto:bhattaraibhupall@gmail.com" class="cta-button">Say Hello</a>
+                <a href="mailto:contact@bhupalbhattarai.com.np" class="cta-button">Say Hello</a>
              </div>
         </section>
     </main>
