--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="md:col-span-2 flex justify-center items-start fade-in">
                     <div class="w-64 h-64 relative group">
                         <div class="absolute inset-0 bg-accent rounded-lg transform rotate-6 group-hover:rotate-3 transition-transform duration-300"></div>
-                        <img src="https://placehold.co/300x300/e2e8f0/2d3748?text=Bhupal" alt="Bhupal Bhattarai" class="relative w-full h-full object-cover rounded-lg shadow-lg" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/2d3748?text=Image+Not+Found';">
+                        <img src="Image/photo.png" alt="Bhupal Bhattarai" class="relative w-full h-full object-cover rounded-lg shadow-lg" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/2d3748?text=Image+Not+Found';">
                     </div>
                 </div>
             </div>
