--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                 <p class="mt-6 max-w-xl text-lg text-gray-400 fade-in" style="transition-delay: 400ms;">
                     A diligent and adaptable professional with a passion for technology, skilled in IT operations, public relations, and customer service. I thrive on learning new skills and contributing to team success.
                 </p>
+                <div class="mt-8 flex items-center space-x-6 fade-in" style="transition-delay: 500ms;">
+                    <a href="#contact" class="cta-button">Get In Touch</a>
+                    <div class="social-icons flex items-center space-x-4">
+                        <a href="https://facebook.com/officialbhupal" target="_blank" class="social-icon" aria-label="Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>
+                        <a href="https://twitter.com/officialbhupal" target="_blank" class="social-icon" aria-label="Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></a>
+                        <a href="https://instagram.com/officialbhupal" target="_blank" class="social-icon" aria-label="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
+                        <a href="tel:+9779817974297" class="social-icon" aria-label="Call"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg></a>
+                        <a href="mailto:contact@bhupalbhattarai.com.np" class="social-icon" aria-label="Email"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -79,9 +89,25 @@
             <div class="content-wrapper mx-auto">
                 <h2 class="text-3xl font-bold mb-12 flex items-center fade-in">About Me<span class="h-px bg-gray-600 flex-grow ml-4"></span></h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
-                    <div class="text-gray-400 text-lg space-y-4 fade-in">
-                        <p>Hello! I'm Bhupal, a dedicated and trustworthy professional with a strong foundation in IT and a knack for organization. My journey into the tech world began in 2015 with a diploma in computer hardware, which sparked a long-standing passion for technology.</p>
-                        <p>I enjoy taking on challenges and am eager to learn and take the lead. My goal is to leverage my skills to foster career growth while contributing significantly to a company's success. I am a friendly, team-oriented individual who brings both innovation and technical know-how to the table.</p>
+                    <div class="text-gray-400 text-lg space-y-6 fade-in">
+                        <div>
+                            <p>Hello! I'm Bhupal, a dedicated and trustworthy professional with a strong foundation in IT and a knack for organization. My journey into the tech world began in 2015 with a diploma in computer hardware, which sparked a long-standing passion for technology.</p>
+                            <p class="mt-4">I enjoy taking on challenges and am eager to learn and take the lead. My goal is to leverage my skills to foster career growth while contributing significantly to a company's success. I am a friendly, team-oriented individual who brings both innovation and technical know-how to the table.</p>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold text-gray-100 mb-4">My Hobbies</h3>
+                            <div class="flex flex-wrap gap-3">
+                                <span class="hobby-tag">Reading</span>
+                                <span class="hobby-tag">Writing</span>
+                                <span class="hobby-tag">Travelling</span>
+                                <span class="hobby-tag">Watching Movies & Series</span>
+                                <span class="hobby-tag">Listening to Songs</span>
+                                <span class="hobby-tag">Sketching</span>
+                                <span class="hobby-tag">Web Development</span>
+                                <span class="hobby-tag">Frontend Designing</span>
+                                <span class="hobby-tag">Graphic Designing</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="about-image-container fade-in">
                         <img src="Image/photo.png" alt="Bhupal Bhattarai" class="rounded-lg shadow-lg" onerror="this.onerror=null;this.src='https://placehold.co/400x500/e2e8f0/2d3748?text=Image+Not+Found';">
@@ -176,19 +202,33 @@
 
         <!-- Skills Section -->
         <section id="skills" class="py-20 lg:py-32 bg-[#112240] px-4">
-            <div class="content-wrapper mx-auto text-center">
-                <h2 class="text-3xl font-bold mb-12 fade-in">Skills & Strengths</h2>
-                <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
-                    <div class="glass-card p-6 fade-in"><p>Customer Service</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Communication</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Teamwork</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Problem Solving</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Adaptability</p></div>
-                    <div class="glass-card p-6 fade-in"><p>E-mail & Internet</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Data Management</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Technical Support</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Public Speaking</p></div>
-                    <div class="glass-card p-6 fade-in"><p>Self-Motivated</p></div>
+            <div class="content-wrapper mx-auto">
+                <h2 class="text-3xl font-bold mb-16 text-center fade-in">Skills & Strengths</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+                    <div class="fade-in">
+                        <h3 class="text-2xl font-semibold text-center mb-8 text-accent">Professional Strengths</h3>
+                        <div class="skills-grid">
+                            <div class="skill-item">Customer Service</div>
+                            <div class="skill-item">Communication</div>
+                            <div class="skill-item">Teamwork</div>
+                            <div class="skill-item">Problem Solving</div>
+                            <div class="skill-item">Adaptability</div>
+                            <div class="skill-item">Public Speaking</div>
+                        </div>
+                    </div>
+                    <div class="fade-in">
+                        <h3 class="text-2xl font-semibold text-center mb-8 text-accent">Technical Skills</h3>
+                        <div class="skills-grid">
+                            <div class="skill-item">HTML</div>
+                            <div class="skill-item">CSS</div>
+                            <div class="skill-item">JavaScript</div>
+                            <div class="skill-item">WordPress</div>
+                            <div class="skill-item">Google Workspace</div>
+                            <div class="skill-item">Photoshop</div>
+                            <div class="skill-item">Video Editing</div>
+                            <div class="skill-item">Data Management</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
