--- a/index.html
+++ b/index.html
@@ -91,18 +91,13 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
                     <div class="text-gray-400 text-lg space-y-6 fade-in">
                         <div>
-                            <p>Hello! I'm Bhupal, a dedicated and trustworthy professional with a strong foundation in IT and a knack for organization. My journey into the tech world began in 2015 with a diploma in computer hardware, which sparked a long-standing passion for technology.</p>
-                            <p class="mt-4">I enjoy taking on challenges and am eager to learn and take the lead. My goal is to leverage my skills to foster career growth while contributing significantly to a company's success. I am a friendly, team-oriented individual who brings both innovation and technical know-how to the table.</p>
+                            <p>Hello! I'm Bhupal. My journey into the tech world began in 2015 with a diploma in computer hardware, which sparked a long-standing passion for technology that continues to drive me. I thrive on challenges and am always eager to learn, take the lead, and contribute to a team's success.</p>
+                            <p class="mt-4">As a friendly and adaptable professional, my goal is to leverage my skills in IT operations and public relations to help a company achieve its objectives while I continue to grow professionally.</p>
                         </div>
                         <div>
-                            <h3 class="text-xl font-semibold text-gray-100 mb-4">My Hobbies</h3>
-                            <div class="flex flex-wrap gap-3">
-                                <span class="hobby-tag">Reading</span>
-                                <span class="hobby-tag">Writing</span>
-                                <span class="hobby-tag">Travelling</span>
-                                <span class="hobby-tag">Watching Movies & Series</span>
-                                <span class="hobby-tag">Listening to Songs</span>
-                                <span class="hobby-tag">Sketching</span>
+                            <h3 class="text-xl font-semibold text-gray-100 mb-4">Outside of work...</h3>
+                            <p class="mt-4">When I'm not focused on my professional life, I'm a passionate creator and explorer. I love getting lost in a good book, expressing my thoughts through writing, and travelling to new places. I'm also a huge fan of cinema and enjoy watching movies and series. Music is a constant companion, and I find a creative outlet in sketching. On the technical side, I'm constantly honing my skills in:</p>
+                            <div class="flex flex-wrap gap-3 mt-4">
                                 <span class="hobby-tag">Web Development</span>
                                 <span class="hobby-tag">Frontend Designing</span>
                                 <span class="hobby-tag">Graphic Designing</span>
@@ -124,7 +119,7 @@
                     <!-- Timeline Item 1 -->
                     <div class="timeline-item fade-in">
                         <div class="timeline-logo">
-                            <img src="Image/asialink.jpg" alt="ASIALINK SERVICES PVT. LTD. Logo" class="rounded-full">
+                            <img src="Image/asialink.jpg" alt="ASIALINK SERVICES PVT. LTD. Logo">
                         </div>
                         <div class="timeline-content">
                             <h3 class="text-xl font-semibold text-gray-100">Documentation Department Head</h3>
@@ -139,7 +134,7 @@
                     <!-- Timeline Item 2 -->
                     <div class="timeline-item fade-in">
                         <div class="timeline-logo">
-                            <img src="Image/ctfnepal.jpg" alt="Nepal Career Training Foundation Logo" class="rounded-full">
+                            <img src="Image/ctfnepal.jpg" alt="Nepal Career Training Foundation Logo">
                         </div>
                         <div class="timeline-content">
                             <h3 class="text-xl font-semibold text-gray-100">IT Officer</h3>
@@ -154,7 +149,7 @@
                     <!-- Timeline Item 3 -->
                     <div class="timeline-item fade-in">
                         <div class="timeline-logo">
-                            <img src="Image/futureemployment.jpg" alt="Future Employment Service Logo" class="rounded-full">
+                            <img src="Image/futureemployment.jpg" alt="Future Employment Service Logo">
                         </div>
                         <div class="timeline-content">
                             <h3 class="text-xl font-semibold text-gray-100">Public Relation Officer</h3>
@@ -169,7 +164,7 @@
                     <!-- Timeline Item 4 -->
                     <div class="timeline-item fade-in">
                         <div class="timeline-logo">
-                            <img src="Image/focusnepal.jpg" alt="Focus Nepal Overseas Logo" class="rounded-full">
+                            <img src="Image/focusnepal.jpg" alt="Focus Nepal Overseas Logo">
                         </div>
                         <div class="timeline-content">
                             <h3 class="text-xl font-semibold text-gray-100">Computer Operator</h3>
@@ -184,7 +179,7 @@
                     <!-- Timeline Item 5 -->
                     <div class="timeline-item fade-in">
                         <div class="timeline-logo">
-                           <img src="Image/communityecenter.jpg" alt="Community e-Center Jhapa Logo" class="rounded-full">
+                           <img src="Image/communityecenter.jpg" alt="Community e-Center Jhapa Logo">
                         </div>
                         <div class="timeline-content">
                             <h3 class="text-xl font-semibold text-gray-100">Computer Trainer</h3>
