--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-semibold text-gray-100 mb-4">Outside of work...</h3>
-                            <p class="mt-4">When I'm not focused on my professional life, I'm a passionate creator and explorer. I love getting lost in a good book, expressing my thoughts through writing, and travelling to new places. I'm also a huge fan of cinema and enjoy watching movies and series. Music is a constant companion, and I find a creative outlet in sketching. On the technical side, I'm constantly honing my skills in:</p>
+                            <p class="mt-4">When I'm not focused on my professional life, I'm a passionate creator and explorer. I love getting lost in a good book, expressing my thoughts through writing, and travelling to new places. I'm also a huge fan of cinema and enjoy watching movies and series. Music is a constant companion, and I find a creative outlet in sketching. This creativity also extends to my technical pursuits, where I enjoy:</p>
                             <div class="flex flex-wrap gap-3 mt-4">
                                 <span class="hobby-tag">Web Development</span>
                                 <span class="hobby-tag">Frontend Designing</span>
