--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy | Bhupal Bhattarai</title>
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+
+    <!-- Tailwind CSS for utility classes -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Additional styles for the privacy policy page */
+        .privacy-policy-container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 4rem 2rem;
+        }
+        .privacy-policy-container h1 {
+            color: #64ffda;
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+        .privacy-policy-container h2 {
+            color: #ccd6f6;
+            margin-top: 2rem;
+            margin-bottom: 1rem;
+            border-bottom: 1px solid #233554;
+            padding-bottom: 0.5rem;
+        }
+        .privacy-policy-container p {
+            line-height: 1.8;
+            margin-bottom: 1rem;
+            color: #8892b0;
+        }
+        .privacy-policy-container a {
+            color: #64ffda;
+            text-decoration: underline;
+        }
+        .back-to-home {
+            display: inline-block;
+            margin-bottom: 2rem;
+            color: #64ffda;
+            text-decoration: none;
+            font-family: 'Roboto Mono', monospace;
+        }
+        .back-to-home:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body class="antialiased">
+
+    <div class="privacy-policy-container">
+        <a href="index.html" class="back-to-home">← Back to Home</a>
+
+        <h1 class="text-4xl font-bold">Privacy Policy</h1>
+        <p><strong>Last updated:</strong> July 15, 2025</p>
+
+        <h2>Introduction</h2>
+        <p>
+            This Privacy Policy explains how I collect, use, and protect your information when you visit my website. Your privacy is important to me, and I am committed to protecting it.
+        </p>
+
+        <h2>Information I Collect</h2>
+        <p>
+            The only personal information I collect is what you voluntarily provide to me through the contact form on this website. This information includes:
+        </p>
+        <ul class="list-disc list-inside text-gray-400 space-y-2 pl-4">
+            <li>Your Name</li>
+            <li>Your Email Address</li>
+            <li>The Subject of your message</li>
+            <li>The content of your Message</li>
+        </ul>
+
+        <h2>How I Use Your Information</h2>
+        <p>
+            I use the information you provide solely for the purpose of responding to your inquiries and communicating with you. I do not sell, trade, or otherwise transfer your personal information to outside parties.
+        </p>
+
+        <h2>Third-Party Services</h2>
+        <p>
+            This website uses <a href="https://formspree.io/" target="_blank" rel="noopener noreferrer">Formspree</a> to handle contact form submissions. When you submit the contact form, your information is sent to Formspree, which then forwards it to my email address. You can review Formspree's privacy policy to understand how they handle your data.
+        </p>
+
+        <h2>Data Security</h2>
+        <p>
+            I take reasonable measures to protect the information you provide. However, please be aware that no method of transmission over the Internet or method of electronic storage is 100% secure. While I strive to use commercially acceptable means to protect your personal information, I cannot guarantee its absolute security.
+        </p>
+
+        <h2>Changes to This Privacy Policy</h2>
+        <p>
+            I may update this Privacy Policy from time to time. I will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.
+        </p>
+
+        <h2>Contact Me</h2>
+        <p>
+            If you have any questions about this Privacy Policy, you can contact me at <a href="mailto:contact@bhupalbhattarai.com.np">contact@bhupalbhattarai.com.np</a>.
+        </p>
+    </div>
+
+</body>
+</html>
 
