--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhupal Bhattarai | Portfolio</title>
+    <title>Bhupal Bhattarai</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
-                    <a href="#hero" class="text-2xl font-bold text-accent">BB</a>
+                    <a href="#hero" class="text-2xl font-bold text-accent">BHUPAL BHATTARAI</a>
                 </div>
                 <!-- Desktop Menu -->
                 <div class="hidden md:block">
