--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
-                    <a href="#hero" class="text-2xl font-bold text-accent">BHUPAL BHATTARAI</a>
+                    <a href="#hero" class="text-2xl font-bold text-accent">Bhupal Bhattarai</a>
                 </div>
                 <!-- Desktop Menu -->
                 <div class="hidden md:block">
@@ -140,9 +140,10 @@
                             <h3 class="text-xl font-semibold text-gray-100">IT Officer</h3>
                             <p class="text-accent mb-2">Nepal Career Training Foundation | <span class="text-gray-400">April 2021 - Nov 2023</span></p>
                             <ul class="list-disc list-inside text-gray-400 space-y-2">
-                                <li>Managed training databases: EVENT-II, SAMRIDDHI, NSTB, and FEB TMIS.</li>
-                                <li>Handled organizing, updating, and storing documents to ensure efficient information retrieval.</li>
-                                <li>Provided technical support to all employees and performed routine data backups and recovery.</li>
+                                <li>Managed and maintained four key training databases: EVENT-II, SAMRIDDHI, NSTB, and FEB TMIS.</li>
+                                <li>Streamlined document management processes, including organization, updates, and storage for efficient information retrieval.</li>
+                                <li>Provided comprehensive technical support to all staff and conducted routine data backups and recovery.</li>
+                                <li>Facilitated clear communication and collaboration between instructors and program participants.</li>
                             </ul>
                         </div>
                     </div>
@@ -155,9 +156,10 @@
                             <h3 class="text-xl font-semibold text-gray-100">Public Relation Officer</h3>
                             <p class="text-accent mb-2">Future Employment Service | <span class="text-gray-400">Aug 2019 - Mar 2020</span></p>
                             <ul class="list-disc list-inside text-gray-400 space-y-2">
-                                <li>Ensured a positive public image for the company through strategic communication.</li>
-                                <li>Built and maintained strong relationships with clients, job seekers, and stakeholders.</li>
-                                <li>Organized recruitment events and handled client feedback to improve services.</li>
+                                <li>Developed and executed strategies to maintain a positive public image for the company.</li>
+                                <li>Cultivated and managed relationships with clients, job seekers, and key industry stakeholders.</li>
+                                <li>Organized and promoted successful recruitment drives and client appreciation events.</li>
+                                <li>Authored company communications and effectively managed public-facing inquiries.</li>
                             </ul>
                         </div>
                     </div>
@@ -170,9 +172,10 @@
                             <h3 class="text-xl font-semibold text-gray-100">Computer Operator</h3>
                             <p class="text-accent mb-2">Focus Nepal Overseas | <span class="text-gray-400">July 2016 - July 2019</span></p>
                             <ul class="list-disc list-inside text-gray-400 space-y-2">
-                                <li>Managed client passport handling and maintained detailed records.</li>
-                                <li>Monitored daily office emails and handled client document processing.</li>
-                                <li>Collaborated with senior officers on document forwarding and processing strategies.</li>
+                                <li>Oversaw the handling of client passports and maintained meticulous, confidential records.</li>
+                                <li>Managed daily office communications and the secure processing of client documents for international placement.</li>
+                                <li>Served as the primary liaison for client inquiries regarding document processing and status updates.</li>
+                                <li>Collaborated with senior officers to ensure efficient document forwarding and processing.</li>
                             </ul>
                         </div>
                     </div>
@@ -185,9 +188,9 @@
                             <h3 class="text-xl font-semibold text-gray-100">Computer Trainer</h3>
                             <p class="text-accent mb-2">Community e-Center Jhapa | <span class="text-gray-400">Jan 2015 - Mar 2016</span></p>
                             <ul class="list-disc list-inside text-gray-400 space-y-2">
-                                <li>Created new lesson plans based on course objectives.</li>
-                                <li>Used Microsoft Office and e-Learning authoring tools to carry out training.</li>
-                                <li>Presented information concisely and clearly, enabling participants to easily understand.</li>
+                                <li>Designed and delivered engaging lesson plans based on defined course objectives.</li>
+                                <li>Utilized Microsoft Office and modern e-Learning tools to conduct effective, hands-on training sessions.</li>
+                                <li>Recognized for presenting complex information clearly and concisely, consistently earning positive student evaluations.</li>
                             </ul>
                         </div>
                     </div>
