--- a/cv.html
+++ b/cv.html
@@ -236,7 +236,7 @@
     <!-- Page 1 -->
     <div class="page">
         <aside class="sidebar">
-            <img src="WhatsApp Image 2025-07-10 at 12.54.31_44ab71cc.jpg" alt="Bhupal Bhattarai" class="profile-pic" onerror="this.onerror=null;this.src='https://placehold.co/150x150/ecf0f1/2c3e50?text=BB';">
+            <img src="Image/ppsizephoto.jpg" alt="Bhupal Bhattarai" class="profile-pic" onerror="this.onerror=null;this.src='https://placehold.co/150x150/ecf0f1/2c3e50?text=BB';">
             <h1>Bhupal Bhattarai</h1>
             <h2>IT & Documentation Professional</h2>
 
