--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="#experience" class="text-gray-300 hover:text-accent px-3 py-2 rounded-md text-sm font-medium">Experience</a>
                         <a href="#skills" class="text-gray-300 hover:text-accent px-3 py-2 rounded-md text-sm font-medium">Skills</a>
                         <a href="#contact" class="text-gray-300 hover:text-accent px-3 py-2 rounded-md text-sm font-medium">Contact</a>
-                        <a href="cv.pdf" download class="nav-cta-button">Download CV</a>
+                        <a href="image/cv.pdf" download class="nav-cta-button">Download CV</a>
                     </div>
                 </div>
                 <!-- Mobile menu button -->
@@ -61,7 +61,7 @@
                 <a href="#experience" class="text-gray-300 hover:text-accent block px-3 py-2 rounded-md text-base font-medium">Experience</a>
                 <a href="#skills" class="text-gray-300 hover:text-accent block px-3 py-2 rounded-md text-sm font-medium">Skills</a>
                 <a href="#contact" class="text-gray-300 hover:text-accent block px-3 py-2 rounded-md text-base font-medium">Contact</a>
-                <a href="Bhupal_Bhattarai_CV.pdf" download class="text-gray-300 hover:text-accent block px-3 py-2 rounded-md text-base font-medium">Download CV</a>
+                <a href="Image/cv.pdf" download class="text-gray-300 hover:text-accent block px-3 py-2 rounded-md text-base font-medium">Download CV</a>
             </div>
         </div>
     </header>
