--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5644764333003001"
+     crossorigin="anonymous"></script>
     <title>Bhupal Bhattarai</title>
     
     <!-- Google Fonts -->
